# sushi

./: API.md  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md
.cargo/: config.toml
backend/: .gitignore  Cargo.toml  docker-compose.yml
backend/migrations/: 20250914062014_init.sql
backend/src/: auth.rs  config.rs  consts.rs  error.rs  lib.rs  main.rs  types.rs
backend/src/endpoints/: admin.rs  db.rs  mod.rs  shipping.rs
backend/src/models/: address.rs  customer.rs  order.rs  ups_rate_request.rs  ups_rate_response.rs  ups_request.rs
src/: client.rs  enums.rs  middleware.rs  utils.rs
src/endpoints/: admin.rs  auth.rs  mod.rs  orders.rs
src/models/: mod.rs  order_item.rs  ship_from.rs  ups_api_response.rs  ups_error.rs  ups_response.rs  user.rs
